--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,8 @@ repositories {
 	mavenCentral()
 }
 
-def runeLiteVersion = 'latest.release'
+// def runeLiteVersion = 'latest.release'
+def runeLiteVersion = '1.11.8.2'
 
 dependencies {
 	compileOnly group: 'net.runelite', name:'client', version: runeLiteVersion
