--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,5 +1,5 @@
-displayName=Example
-author=Nobody
-description=An example greeter plugin
-tags=
-plugins=com.example.ExamplePlugin
+displayName=Item Locker
+author=Ryan M
+description=Removes the ability to interact with locked items
+tags=lock,disable,item
+plugins=com.example.ItemLockerPlugin
